--- a/index.html
+++ b/index.html
@@ -4,13 +4,135 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Project: Recipes</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+    <title>Brau's recipes</title>
+    <link rel="stylesheet" href="assets/styles/menu.css">
+    <link rel="stylesheet" href="assets/styles/main.css">
+    <link rel="stylesheet" href="assets/styles/container.css">
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/pizza.html">Pizza</a>
-    <a href="recipes/burger.html">Burger</a>
+    <nav class="menu">
+        <div class="header">
+            <h2 class="title">Brau's Recipes</h2>
+            <div class="presentation">
+                <img class="icon" src="assets/images/icon.png" />
+                <div class="signature">
+                    <p class="primary">Brayan Frank</p>
+                    <p class="secondary">Master Chef</p>
+                </div>
+            </div>
+        </div>
+        <div class="menu-content">
+            <div class="menu-button"></div>
+        </div>
+    </nav>
+    <main class="container">
+        <div class="recipes">
+            <a class="box" href="/pizza-calabresa">
+                <div class="image-section">
+                    <img class="image" src="assets/images/recipes/pizza.webp">
+                </div>
+                <h3 class="title">Pizza de Calabresa</h3>
+                <p class="description">Esta pizza de calabresa é um clássico irresistível da culinária brasileira. A
+                    massa caseira, crocante por fora e macia por dentro, serve de base para uma generosa camada de molho
+                    de tomate temperado. Por cima, fatias de calabresa levemente picante são distribuídas junto com
+                    rodelas de cebola roxa, que caramelizam no forno trazendo um toque adocicado. Finalize com azeitonas
+                    pretas fatiadas e orégano fresco. O queijo mussarela derretido une todos os ingredientes, criando
+                    aqueles fios irresistíveis a cada fatia. Perfeita para compartilhar com a família ou amigos em
+                    qualquer ocasião.</p>
+                <div class="badgers-section">
+                    <div class="badger">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="var(--secondary-font)" viewBox="0 0 24 24"
+                            stroke-width="1.5" stroke="none" class="icon">
+                            <path fill-rule="evenodd"
+                                d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25ZM12.75 6a.75.75 0 0 0-1.5 0v6c0 .414.336.75.75.75h4.5a.75.75 0 0 0 0-1.5h-3.75V6Z"
+                                clip-rule="evenodd" />
+                        </svg>
+                        20min
+                    </div>
+                    <div class="badger">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="var(--secondary-font)" class="icon">
+                            <path fill-rule="evenodd"
+                                d="M12.963 2.286a.75.75 0 0 0-1.071-.136 9.742 9.742 0 0 0-3.539 6.176 7.547 7.547 0 0 1-1.705-1.715.75.75 0 0 0-1.152-.082A9 9 0 1 0 15.68 4.534a7.46 7.46 0 0 1-2.717-2.248ZM15.75 14.25a3.75 3.75 0 1 1-7.313-1.172c.628.465 1.35.81 2.133 1a5.99 5.99 0 0 1 1.925-3.546 3.75 3.75 0 0 1 3.255 3.718Z"
+                                clip-rule="evenodd" />
+                        </svg>
+
+                        420kcal
+                    </div>
+                </div>
+            </a>
+            <a class="box" href="/pizza-calabresa">
+                <div class="image-section">
+                    <img class="image" src="assets/images/recipes/pizza.webp">
+                </div>
+                <h3 class="title">Pizza de Calabresa</h3>
+                <p class="description">Esta pizza de calabresa é um clássico irresistível da culinária brasileira. A
+                    massa caseira, crocante por fora e macia por dentro, serve de base para uma generosa camada de molho
+                    de tomate temperado. Por cima, fatias de calabresa levemente picante são distribuídas junto com
+                    rodelas de cebola roxa, que caramelizam no forno trazendo um toque adocicado. Finalize com azeitonas
+                    pretas fatiadas e orégano fresco. O queijo mussarela derretido une todos os ingredientes, criando
+                    aqueles fios irresistíveis a cada fatia. Perfeita para compartilhar com a família ou amigos em
+                    qualquer ocasião.</p>
+                <div class="badgers-section">
+                    <div class="badger">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="var(--secondary-font)" viewBox="0 0 24 24"
+                            stroke-width="1.5" stroke="none" class="icon">
+                            <path fill-rule="evenodd"
+                                d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25ZM12.75 6a.75.75 0 0 0-1.5 0v6c0 .414.336.75.75.75h4.5a.75.75 0 0 0 0-1.5h-3.75V6Z"
+                                clip-rule="evenodd" />
+                        </svg>
+                        20min
+                    </div>
+                    <div class="badger">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="var(--secondary-font)" class="icon">
+                            <path fill-rule="evenodd"
+                                d="M12.963 2.286a.75.75 0 0 0-1.071-.136 9.742 9.742 0 0 0-3.539 6.176 7.547 7.547 0 0 1-1.705-1.715.75.75 0 0 0-1.152-.082A9 9 0 1 0 15.68 4.534a7.46 7.46 0 0 1-2.717-2.248ZM15.75 14.25a3.75 3.75 0 1 1-7.313-1.172c.628.465 1.35.81 2.133 1a5.99 5.99 0 0 1 1.925-3.546 3.75 3.75 0 0 1 3.255 3.718Z"
+                                clip-rule="evenodd" />
+                        </svg>
+
+                        420kcal
+                    </div>
+                </div>
+            </a>
+            <a class="box" href="/pizza-calabresa">
+                <div class="image-section">
+                    <img class="image" src="assets/images/recipes/pizza.webp">
+                </div>
+                <h3 class="title">Pizza de Calabresa</h3>
+                <p class="description">Esta pizza de calabresa é um clássico irresistível da culinária brasileira. A
+                    massa caseira, crocante por fora e macia por dentro, serve de base para uma generosa camada de molho
+                    de tomate temperado. Por cima, fatias de calabresa levemente picante são distribuídas junto com
+                    rodelas de cebola roxa, que caramelizam no forno trazendo um toque adocicado. Finalize com azeitonas
+                    pretas fatiadas e orégano fresco. O queijo mussarela derretido une todos os ingredientes, criando
+                    aqueles fios irresistíveis a cada fatia. Perfeita para compartilhar com a família ou amigos em
+                    qualquer ocasião.</p>
+                <div class="badgers-section">
+                    <div class="badger">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="var(--secondary-font)" viewBox="0 0 24 24"
+                            stroke-width="1.5" stroke="none" class="icon">
+                            <path fill-rule="evenodd"
+                                d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25ZM12.75 6a.75.75 0 0 0-1.5 0v6c0 .414.336.75.75.75h4.5a.75.75 0 0 0 0-1.5h-3.75V6Z"
+                                clip-rule="evenodd" />
+                        </svg>
+                        20min
+                    </div>
+                    <div class="badger">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="var(--secondary-font)" class="icon">
+                            <path fill-rule="evenodd"
+                                d="M12.963 2.286a.75.75 0 0 0-1.071-.136 9.742 9.742 0 0 0-3.539 6.176 7.547 7.547 0 0 1-1.705-1.715.75.75 0 0 0-1.152-.082A9 9 0 1 0 15.68 4.534a7.46 7.46 0 0 1-2.717-2.248ZM15.75 14.25a3.75 3.75 0 1 1-7.313-1.172c.628.465 1.35.81 2.133 1a5.99 5.99 0 0 1 1.925-3.546 3.75 3.75 0 0 1 3.255 3.718Z"
+                                clip-rule="evenodd" />
+                        </svg>
+
+                        420kcal
+                    </div>
+                </div>
+            </a>
+        </div>
+    </main>
 </body>
 
 </html>
